<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">Score  </string>
    <string name="introductions">　　1、开始时棋盘内随机出现两个数字，出现的数字仅可能为2或4;
\n\n　　2、玩家可以选择上下左右四个方向，若棋盘内的数字出现位移或合并，视为有效移动;
\n　　\n　　3、玩家选择的方向上若有相同的数字则合并，每次有效移动可以同时合并，但不可以连续合并；
\n　　\n　　4、合并所得的所有新生成数字想加即为该步的有效得分；
\n　　\n　　5、玩家选择的方向行或列前方有空格则出现位移；
\n　　\n　　6、每有效移动一步，棋盘的空位(无数字处)随机出现一个数字(依然可能为2或4)；
\n　　\n　　7、棋盘被数字填满，无法进行有效移动，判负，游戏结束；
\n　　\n　　8、棋盘上出现2048，判胜，游戏结束。</string>
    <string name="about">游戏名：2048\n\n属性：休闲益智小游戏\n\n版本号：测试版
\n
\n上线日期：2016/9/19</string>
	<color name="bg_color">#EEE0E5</color>
	<color name="bt_text_clolr">#8B5A00</color>
	<color name="bt_bg">#EEB422</color>
	<string name="btStart">开始游戏</string>
	<string name="bt_rule">游戏规则</string>
	<string name="btAbout">关   于</string>
	<string name="btExit">退   出</string>
	<dimen name="bt_text_size">18sp</dimen>

</resources>