<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/bg_color">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/btStart"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btStart"
            android:textColor="@color/bt_text_clolr"
            android:background="@color/bt_bg"
            android:textSize="@dimen/bt_text_size" />

        <Button
            android:id="@+id/btRule"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bt_rule"
            android:textColor="@color/bt_text_clolr"
            android:background="@color/bt_bg"
            android:textSize="@dimen/bt_text_size" />

        <Button
            android:id="@+id/btAbout"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btAbout"
            android:textColor="@color/bt_text_clolr"
            android:background="@color/bt_bg"
            android:textSize="@dimen/bt_text_size" />
        
        <Button 
            android:id="@+id/btExit"
            android:layout_width="@dimen/bt_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btExit"
            android:textColor="@color/bt_text_clolr"
            android:background="@color/bt_bg"
            android:textSize="@dimen/bt_text_size"/>
        
</LinearLayout>